# pc-bridge

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v3.0.0.md  build.bat  build.rs  clippy.toml  deny.toml  games.json  go.mod  go.sum  install.bat  main.go  rsrc_windows_386.syso  rsrc_windows_amd64.syso  rustfmt.toml  uninstall.bat  userConfig.example.json
.cargo/: deny.toml
.github/workflows/: build.yml  ci.yml  release.yml  security.yml
commands/: execute.go
internal/commands/: execute.go
internal/config/: config.go  games.go
internal/mqtt/: client.go
internal/power/: display.go  events.go
internal/sensors/: games.go  idle.go
internal/winapi/: winapi.go
mqtt/: client.go
power/: display.go  events.go
scripts/: build.sh  quality-check.sh
sensors/: games.go
src/: audio.rs  config.rs  credential.rs  fsutil.rs  hwinfo.rs  linux_dbus.rs  linux_idle.rs  linux_wayland.rs  linux_x11.rs  logging.rs  main.rs  mqtt.rs  notification.rs  setup.rs  supervisor.rs  tray.rs  updater.rs  winapi.rs
src/commands/: custom.rs  dry_run.rs  executor.rs  executor_linux.rs  launcher.rs  launcher_linux.rs  mod.rs
src/mqtt/: discovery.rs  mod.rs  payload.rs  topics.rs
src/power/: display.rs  display_linux.rs  events.rs  events_linux.rs  mod.rs  sync_mqtt.rs
src/sensors/: audio_device.rs  capture.rs  custom.rs  disk.rs  games.rs  games_linux.rs  gpu.rs  hwinfo.rs  idle.rs  idle_linux.rs  memory.rs  mod.rs  network.rs  now_playing.rs  process_watcher.rs  session.rs  session_linux.rs  steam.rs  steam_downloads.rs  system.rs  uptime.rs  volume.rs
src/steam/: appinfo.rs  discovery.rs  download_probe.rs  mod.rs  vdf.rs
src/ui/: app.rs  live.rs  mod.rs  model.rs  theme.rs
testkit/: Cargo.toml  README.md
testkit/src/: main.rs
tests/: config_integration.rs
winres/: winres.json
